[package]
name = "rite"
version = "0.1.0"
authors = ["Yu Ding <dingelish@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/dingelish/rite"
description = "Placeholder for rite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
